--- a/notebooks/streetview_image_downloader.ipynb
+++ b/notebooks/streetview_image_downloader.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "5983  n7r_9DJH7aVQkmd6-NkcPw_W  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
      "output_type": "stream",
      "text": [
       "Testing metadata extraction with pano_id: -cX_K4b2xaMEfE_6uV0BGg\n",
-      "Sample metadata: {'raw_metadata': {'date': '2022-06', 'location': Location(lat=-34.62136454831757, lng=-58.55034840801271), 'pano_id': '-cX_K4b2xaMEfE_6uV0BGg', 'copyright': '© Google'}, 'date': 'Jun 2022', 'location': Location(lat=-34.62136454831757, lng=-58.55034840801271), 'status': 'UNKNOWN'}\n"
+      "Sample metadata: {'raw_metadata': {'date': '2022-06', 'location': Location(lat=-34.62136602968939, lng=-58.55034640285881), 'pano_id': '-cX_K4b2xaMEfE_6uV0BGg', 'copyright': '© Google'}, 'date': 'Jun 2022', 'location': Location(lat=-34.62136602968939, lng=-58.55034640285881), 'status': 'UNKNOWN'}\n"
      ]
     }
    ],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting metadata: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:00<00:00,  3.11it/s]"
+      "Extracting metadata: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:01<00:00,  2.92it/s]"
      ]
     },
     {
@@ -492,7 +492,7 @@
        "2  n7r_9DJH7aVQkmd6-NkcPw  Jun 2019  UNKNOWN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading images: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 12/12 [00:09<00:00,  1.28it/s]"
+      "Downloading images: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 12/12 [00:00<00:00, 3739.35it/s]"
      ]
     },
     {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
     }
    ],
    "source": [
-    "display_cluster_images_with_metadata(342)"
+    "display_cluster_images_with_metadata(CLUSTER_ID)"
    ]
   },
   {
